--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook --no-dll --quiet",
-    "coverage": "react-scripts test --coverage --watchAll=false"
+    "coverage": "react-scripts test --coverage --watchAll=false",
+    "coverall": "npm run coverage  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "browserslist": {
     "production": [
@@ -37,9 +38,6 @@
     ]
   },
   "devDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "styled-components": "^5.1.1",
     "@babel/core": "^7.11.1",
     "@storybook/addon-a11y": "^6.0.10",
     "@storybook/addon-actions": "^6.0.10",
@@ -55,7 +53,11 @@
     "@testing-library/dom": "^7.22.2",
     "@types/styled-components": "^5.1.2",
     "babel-loader": "^8.1.0",
-    "react-is": "^16.13.1"
+    "coveralls": "^3.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
+    "styled-components": "^5.1.1"
   },
   "jest": {
     "collectCoverageFrom": [
