--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.2",
   "private": false,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@types/prismjs": "^1.16.1",
     "polished": "^3.6.5",
     "prismjs": "^1.21.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
@@ -13,6 +22,30 @@
   "peerDependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.3",
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@storybook/addon-a11y": "^6.0.10",
+    "@storybook/addon-actions": "^6.0.10",
+    "@storybook/addon-docs": "^6.0.10",
+    "@storybook/addon-essentials": "^6.0.10",
+    "@storybook/addon-knobs": "^6.0.10",
+    "@storybook/addon-links": "^6.0.10",
+    "@storybook/addon-storysource": "^6.0.10",
+    "@storybook/addon-viewport": "^6.0.10",
+    "@storybook/node-logger": "^6.0.10",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.10",
+    "@testing-library/dom": "^7.22.2",
+    "@types/styled-components": "^5.1.2",
+    "babel-loader": "^8.1.0",
+    "coveralls": "^3.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
     "styled-components": "^5.1.1"
   },
   "scripts": {
@@ -36,28 +69,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@storybook/addon-a11y": "^6.0.10",
-    "@storybook/addon-actions": "^6.0.10",
-    "@storybook/addon-docs": "^6.0.10",
-    "@storybook/addon-essentials": "^6.0.10",
-    "@storybook/addon-knobs": "^6.0.10",
-    "@storybook/addon-links": "^6.0.10",
-    "@storybook/addon-storysource": "^6.0.10",
-    "@storybook/addon-viewport": "^6.0.10",
-    "@storybook/node-logger": "^6.0.10",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.10",
-    "@testing-library/dom": "^7.22.2",
-    "@types/styled-components": "^5.1.2",
-    "babel-loader": "^8.1.0",
-    "coveralls": "^3.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-is": "^16.13.1",
-    "styled-components": "^5.1.1"
   },
   "jest": {
     "collectCoverageFrom": [
