--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acdseen/lionh-ui",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,9 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/prismjs": "^1.16.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/prismjs": "^1.16.1",
     "polished": "^3.6.5",
     "prismjs": "^1.21.0",
     "react": "^16.13.1",
@@ -43,6 +43,7 @@
     "@types/styled-components": "^5.1.2",
     "babel-loader": "^8.1.0",
     "coveralls": "^3.1.0",
+    "plop": "^2.7.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
@@ -83,7 +84,7 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
-  "repository":"https://github.com/acdseen/lionh-ui",
+  "repository": "https://github.com/acdseen/lionh-ui",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@acdseen"
   }
