--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,7 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": ["src", "src/components"]
+  "include": ["src", "src/components"],
+  "target": "ESNext",
+  "module": "ESNext"
 }
